--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=SL002_DHT11
 version=1.0.0
 author=Deepanshu Deshwal
 maintainer=Deepanshu Deshwal <deepanshudeshwal0111@gmail.com>
-sentence=Simple Arduino library for reading DHT11 temperature and humidity sensors.
+sentence=Simple Arduino library for reading DHT11 temperature and humidity sensor.
 paragraph=Provides basic read functionality with error codes for DHT11.
 category=Sensors
-url=https://github.com/deepanshu-deshwal/SL002_DHT
+url=https://github.com/deepanshu-deshwal/SL002_DHT11
 architectures=*
